--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,11 @@
-<!<!DOCTYPE html>
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Mi página web</title>
   </head>
   <body>
+    Modificación para nuevo_branch
     Hola, Mundo! Hola otra vez! Hola una tercera vez !
   </body>
 </html>
