--- a/hello.html
+++ b/hello.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>Mi página web</title>
   </head>
   <body>
-    Modificación para nuevo_branch
-    Hola, Mundo! Hola otra vez! Hola una tercera vez !
+    Hola Mundo!!!
   </body>
 </html>
