Hello.html original

--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Mi página web</title>
-  </head>
-  <body>
-    Hola Mundo!!!
-  </body>
+    <head>
+        <title>
+            My Web Page!
+        </title>
+    </head>
+    <body>
+        Hello, world!
+    </body>
 </html>
